--- a/medchat/src/app/page.module.css
+++ b/medchat/src/app/page.module.css
@@ -1,6 +1,8 @@
+/* Styles for the main container */
 .main {
 }
 
+/* Styles for the card container */ 
 .card {
     max-width: 40rem;
     margin: 0 auto;
@@ -13,6 +15,7 @@
     box-shadow: 0px 2px 4px rgba(2, 23, 31, 0.1);
 }
 
+/* Styles for response paragraphs */
 .response {
     line-height: 1.4rem;
     background: #f3f3f3;
